# voce-ir

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  lighthouserc.json  package-lock.json  package.json
.claude/: settings.local.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_compile_target.md
.github/workflows/: ci.yml  mutants.yml  pages.yml
.voce/: SCHEMA.md  brief.yaml.template
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  MCP_SETUP.md  PRD.md  PROJECT_PLAN.md  ROADMAP.md  compatibility-matrix.md  mcp-walkthrough.md  perf-investigation.md  production-build-journal.md  site-v2-build-journal.md  voce-chat-walkthrough.md
docs/accessibility/: EVIDENCE.md  MANUAL_TESTING.md  OVERVIEW.md  RULES.md  WCAG_MAPPING.md
docs/benchmarks/: phase3.md  phase4.md
docs/blog/: launch.md
docs/launch/: README.md  blog-post.md  demo-video-shotlist.md  release-runbook.md  show-hn.md  x-thread.md
docs/plans/: GAP_ANALYSIS.md  MASTER_PLAN.md  sprint-53-web-playground.md  sprint-55-documentation-site.md  sprint-58-production-demo-site.md  sprint-59-performance-optimization.md  sprint-60-community-launch.md  sprint-62-multi-target-split-screen.md  sprint-63-gallery-and-sidecars.md  sprint-65-mcp-conversational-polish.md  sprint-66-standalone-conversational-repl.md  sprint-68-cross-target-parity.md  sprint-69-test-coverage-uplift.md  sprint-70-security-hardening.md  sprint-71-perf-budgets.md  sprint-72-schema-completeness-audit.md  sprint-74-build-pipeline-dev-experience.md  sprint-79-agent-capability-surface.md  sprint-82-accessibility-deep-dive.md  sprint-91-conformance-spec-and-certification.md  sprint-92-pluggable-providers-per-role.md  sprint-93-intelligent-model-recommendations.md
docs/plans/archive/: sprint-01-bootstrap.md  sprint-02-core-schema.md  sprint-03-extended-schema.md  sprint-04-a11y-theming.md  sprint-05-data-forms-seo-i18n.md  sprint-06-validator-core.md  sprint-07-validator-pillars.md  sprint-08-cli-tooling.md  sprint-09-examples-polish.md  sprint-10-docs-release.md  sprint-11-compiler-pipeline.md  sprint-12-layout-compilation.md  sprint-13-state-interaction.md  sprint-14-animation.md  sprint-15-theming-seo-i18n.md  sprint-16-forms-data.md  sprint-17-asset-pipeline.md  sprint-18-security-a11y-quality.md  (+41 more)
docs/research/: ADOPTION_MIGRATION.md  ANIMATION_ASSETS_DEPLOY.md  CONVERSATIONAL_DESIGN.md  DATA_INTEGRATION.md  DEEP_RESEARCH.md  FORMS_SEO_I18N.md  MEMORY_AND_DECISIONS.md  SECURITY_TESTING_TOOLING.md  VOICE_AND_AI_INTEGRATION.md
docs/schema/: COMPLETENESS_AUDIT.md
docs/security/: THREAT_MODEL.md
docs/site/: book.toml
docs/spec/: voce-ir-spec.html
examples/: README.md
examples/landing-page/: landing-page.voce.json
examples/production/: landing.voce.json  prompt.md
scripts/: regenerate-schema.sh
tests/: perf-budgets.toml
tests/fixtures/: container-grid.voce.json  container-row.voce.json  decorative-surface.voce.json  form-contact.voce.json  gesture-tap.voce.json  links-and-nav.voce.json  media-image.voce.json  nested-layout.voce.json  semantic-a11y.voce.json  state-machine.voce.json  surface-card.voce.json  text-heading.voce.json  theme-dark.voce.json
(+82 files in other folders)
